--- a/css/resume.css
+++ b/css/resume.css
@@ -190,3 +190,12 @@ a {
 a:hover, a:focus, a:active {
   color: #824027;
 }
+
+.portfolio .portfolio-item {
+  cursor: pointer;
+  position: relative;
+  display: block;
+  max-width: 25rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
